# scarab

./: .gitignore  .gitmodules  103_104.patch  10_11.patch  140_141.patch  180_181.patch  181_182.patch  182_183.patch  183_184.patch  191_192.patch  202_203.patch  210_211.patch  README.md  pr_354.diff  setup_scarab.sh  source.sh
src/: .clang-format  CMakeLists.txt  Makefile  PARAMS.cortex_a76  PARAMS.cortex_m55  PARAMS.golden_cove  PARAMS.kaby_lake  PARAMS.out  PARAMS.sunny_cove  _run_sim.sh  btb_miss_bp_taken_conf.cc  btb_miss_bp_taken_conf.hpp  cmp_model.c  cmp_model.h  cmp_model_support.c  cmp_model_support.h  conf.cc  conf.hpp  conf_mech.hpp  core.param.def  core.stat.def  ctype_pin_inst.h  dcache_stage.c  dcache_stage.h  decode_stage.c  decode_stage.h  decoupled_frontend.cc  decoupled_frontend.h  decoupled_frontend.hpp  default_conf.cc  default_conf.hpp  exec_ports.c  exec_ports.h  exec_stage.c  fetch.stat.def  freq.c  ft.cc  ft.h  ft.hpp  ft_info.h  (+79 more)
src/baseline/: ideal_fusion_connected_components_ipc.txt  ideal_fusion_dfs_ipc.txt  ideal_fusion_pagerank_ipc.txt  ideal_fusion_sssp_ipc.txt  ideal_fusion_tc_ipc.txt  ideal_fusion_tsp_ipc.txt  summary.csv
src/baseline/community/: community_core.stat.0.csv  community_core.stat.0.out  community_fetch.stat.0.csv  community_fetch.stat.0.out  community_inst.stat.0.csv  community_inst.stat.0.out  community_l2l1pref.stat.0.csv  community_l2l1pref.stat.0.out  community_memory.stat.0.csv  community_memory.stat.0.out  community_power.stat.0.out  community_pref.stat.0.out  community_ramulator.stat.out
src/bp/: .clang-format  bimodal.cc  bimodal.h  bp.c  bp.h  bp.param.def  bp.param.h  bp.stat.def  bp_conf.c  bp_conf.h  bp_table.def  bp_targ_mech.c  bp_targ_mech.h  btb.h  cbp_lvcp.cc  cbp_lvcp.h  cbp_table.def  cbp_tagescl_64k.cc  cbp_tagescl_64k.h  cbp_to_scarab.cc  cbp_to_scarab.h  confluencebtb.cc  confluencebtb.h  gshare.cc  gshare.h  hybridgp.cc  hybridgp.h  lvcp_bp.h  mtage_unlimited.cc  mtage_unlimited.h  pgobtb.cc  pgobtb.h  shotgunbtb.cc  shotgunbtb.h  tagescl.cc  tagescl.h
src/confidence/: btb_miss_bp_taken_conf.cc  btb_miss_bp_taken_conf.hpp  conf.cc  conf.hpp  ml_data_collection.cc  ml_data_collection.hpp  perceptron_conf.cc  perceptron_conf.hpp  pipeline_gating.cc  pipeline_gating.hpp  weight_conf.cc  weight_conf.hpp
src/debug/: cfg.cc  cfg.h  debug.param.def  debug_macros.h  debug_print.c  pipeview.c
src/dvfs/: dvfs.c
src/frontend/: champsim_fe.cc  champsim_fe.h  champsim_inst.cc  champsim_inst.hpp  champsim_trace_reader.cc  champsim_trace_reader.hpp  frontend.c  frontend.h  frontend_intf.c  frontend_intf.h  frontend_table.def  memtrace_fe.cc  memtrace_trace_reader.cc  memtrace_trace_reader.h  memtrace_trace_reader_memtrace.cc  memtrace_trace_reader_memtrace.h  pin_exec_driven_fe.cc  pin_exec_driven_fe.h  pin_trace_fe.c  pin_trace_fe.h  pin_trace_read.cc  pt_fe.cc  pt_fe.h  pt_trace_reader_pt.h
src/globals/: count_min_sketch.c  count_min_sketch.h  debug_stage.h  global_defs.h  global_types.h  global_vars.h  utils.c  utils.h
src/libs/: bloom_filter.hpp  cache_index.cc  cache_index.h  cache_index_table.def  cache_lib.c  cache_lib.h  cache_lib_table.def  cpp_cache.cc  cpp_cache.h  cpp_cache.tpp  cpp_hash_lib_wrapper.cc  hash_lib.c  list_lib.c  list_lib.h  perceptron.hpp  sha256.cc  sha256.h
src/memory/: cache_part.c  mem_req.c  mem_req.h  memory.c  memory.h  memory.param.def  memory.stat.def
src/power/: power.stat.def  power_scarab_config.cc
src/prefetcher/: D_JOLT.cc  D_JOLT.h  FNL+MMA.cc  FNL+MMA.h  branch_misprediction_table.c  branch_misprediction_table.h  eip.cc  eip.h  fdip.cc  fdip.h  fdip_conf.cc  fdip_conf.hpp  fdip_new.cc  fdip_new.h  l2l1pref.c  l2markv_pref.c  l2way_pref.c  log.stream.txt  pref.param.def  pref.stat.def  pref_2dc.c  pref_2dc.h  pref_2dc.param.def  pref_common.c  pref_common.h  pref_ghb.c  pref_ghb.h  pref_ghb.param.def  pref_markov.c  pref_markov.h  pref_markov.param.def  pref_phase.c  pref_phase.param.def  pref_stream.c  pref_stream.h  pref_stride.c  pref_stride.h  pref_stride.param.def  pref_stridepc.c  pref_stridepc.h  (+8 more)
src/ramulator/: CMakeLists.txt
src/support/: asan_default_options.cc.in
src/test/: cbp_to_scarab.cc  message_test_case.h  scarab_dummy_client_test.cc  server_client_socket_test.cc
(+655 files in other folders)
